# faster-livo

./: CMakeLists.txt  README.MD  README.md  package.xml
Log/: imu.txt  mat_out.txt  mat_pre.txt  pose_file.txt  run_mapping_online.INFO  run_mapping_online.WARNING  run_mapping_online.hr.hr.log.INFO.20230404-152448.214822  run_mapping_online.hr.hr.log.INFO.20230404-154529.218826  run_mapping_online.hr.hr.log.INFO.20230404-154540.218993  run_mapping_online.hr.hr.log.INFO.20230404-154604.219195  run_mapping_online.hr.hr.log.INFO.20230404-154742.220027  run_mapping_online.hr.hr.log.INFO.20230404-154932.220718  run_mapping_online.hr.hr.log.INFO.20230404-160315.223285  run_mapping_online.hr.hr.log.INFO.20230404-160521.224039  run_mapping_online.hr.hr.log.INFO.20230404-162702.227686  run_mapping_online.hr.hr.log.INFO.20230404-171020.234978  run_mapping_online.hr.hr.log.INFO.20230404-171556.236214  run_mapping_online.hr.hr.log.INFO.20230404-171850.237201  run_mapping_online.hr.hr.log.INFO.20230404-172139.238095  run_mapping_online.hr.hr.log.INFO.20230404-172625.239453  run_mapping_online.hr.hr.log.INFO.20230404-190248.258031  run_mapping_online.hr.hr.log.INFO.20230404-190307.258172  run_mapping_online.hr.hr.log.INFO.20230404-190820.259541  run_mapping_online.hr.hr.log.INFO.20230404-191208.260516  run_mapping_online.hr.hr.log.INFO.20230404-191717.261651  run_mapping_online.hr.hr.log.INFO.20230404-192024.262566  (+476 more)
config/: mid.yaml  (+3 more)
src/: CMakeLists.txt  frame.cpp  laser_mapping.cc  lidar_selection.cpp  map.cpp  point.cpp  pointcloud_preprocess.cc  utils.cc
src/models/: STDesc.cpp
(+40 files in other folders)
